# mysolver

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
resources/: fragment-shader.glsl  fragment-shader.txt  geometry-shader.glsl  vertex-shader.glsl  vertex-shader.txt
resources/graph-shaders/: fragment-shader.glsl  geometry-shader.glsl  vertex-shader.glsl
resources/particle-shaders/: geometry-shader.glsl  vertex-shader.glsl
src/: Algorithms.cpp  Algorithms.hpp  BoundaryExperiment.cpp  BoundaryExperiment.hpp  Experiment.hpp  Graphics.cpp  Graphics.hpp  HistoryTracker.cpp  HistoryTracker.hpp  Kernel.cpp  Kernel.hpp  Model.cpp  Model.hpp  Particle.cpp  Particle.hpp  ParticleSet.cpp  ParticleSet.hpp  ParticleSetModel.cpp  ParticleSetModel.hpp  ParticleSimulation.cpp  ParticleSimulation.hpp  Particles.cpp  Particles.hpp  Physics.hpp  main.cpp
src/imgui/: imconfig.h  implot.h
test/: CMakeLists.txt  TestKernel.cpp  TestParticleSet.cpp  TestParticleSet.hpp  TestParticleSimulation.cpp  test-algorithms.cpp  test-algorithms.hpp  test-main.cpp
